--- a/REST/views/show.ejs
+++ b/REST/views/show.ejs
@@ -5,17 +5,14 @@
 	<title>Fruits</title>
 </head>
 <body>
-	<h1>Fruits 'show' page</h1>
-	<p>this is a fruit page i love fruits fruit is awesome</p>
+	<h1>This is a page of fruits</h1>
+	<p>Click one!</p>
 
-	<!-- note the new tags! -->
-	The <%=fruit.name; %> is <%=fruit.color; %>.
-
-	<% if(fruit.readyToEat == true) { %>
-		It is ready to eat!
-	<%} else { %>
-		It is ABSOLUTELY NOT ready to eat.
-	<%} %>		
-
+	<a href="./fruits/apple">Apple</a>
+	<a href="./fruits/banana">Banana</a>
+	<a href="./fruits/pear">Pear</a>
+	<a href="./fruits/guava">Guava</a>
+	<a href="./fruits/pineapple">Pineapple</a>
+	
 </body>
 </html>
