extended show.ejs to act as an index and showfruit.ejs to load fruit and have a return button

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,16 +6,19 @@
 </head>
 <body>
 	<h1>Fruits 'show' page</h1>
-	<p>this is a fruit page i love fruits fruits is the best food to be of eatin</p>
+	<p>this is a fruit page i love fruit fruits is the best food to be of eatin</p>
+
+	<a href="http://localhost:3000/fruit/0">Apple</a> </br>
+	<a href="http://localhost:3000/fruit/1">Papaya</a> </br>
+	<a href="http://localhost:3000/fruit/2">Mango</a> </br>
+	<a href="http://localhost:3000/fruit/3">Pineapple</a> </br>
+	<a href="http://localhost:3000/fruit/4">Dragonfruit</a> </br>
 
 
-	<!-- note the new tags! -->
-	The <%=fruit.name; %> is <%=fruit.color; %>.
 
-	<% if (fruit.ripe == true) { %>
-		It is ready to eat!
-	<% } else { %>
-		This fruit is not yet ripe.
-	<% } %>
+
+
+
+
 </body>
 </html>
