--- a/REST/views/show.ejs
+++ b/REST/views/show.ejs
@@ -9,12 +9,13 @@
 
 <body>
     <header>
-        _headerContent_
+      
     </header>
 
     <main>
-        <h1>Fruits "show" page</h1>
+        <h1>Welcome to the Fruit store.</h1>
         <p>This is a fruit page I love fruits fruit is awesome!!!</p>
+        <p><a href="/fruits">back to home</a></p>
         <!-- Note the new tag -->
         The
         <%=fruit.name; %> is
@@ -30,7 +31,7 @@
     </main>
 
     <footer>
-        _footerContent_
+      
     </footer>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
