--- a/REST/views/index.ejs
+++ b/REST/views/index.ejs
@@ -7,11 +7,11 @@
 	<h1>Fruit Index Page</h1>
 
 	<ul>
-		<li> <a href="./fruits/0">apple</a></li>
-		<li> <a href="./fruits/1">banana</a></li>
-		<li> <a href="./fruits/2">pear</a></li>
-		<li> <a href="./fruits/3">guava</a></li>
-		<li> <a href="./fruits/4">pineapple</a></li>
+		<li> <a href="./fruits/0"><%=  fruit[0].name  %></a></li>
+		<li> <a href="./fruits/1"><%=  fruit[1].name  %></a></li>
+		<li> <a href="./fruits/2"><%=  fruit[2].name  %></a></li>
+		<li> <a href="./fruits/3"><%=  fruit[3].name  %></a></li>
+		<li> <a href="./fruits/4"><%=  fruit[4].name  %></a></li>
 	</ul>
 
 
