added img links to marsMissions object

--- a/part-2-space/views/show.ejs
+++ b/part-2-space/views/show.ejs
@@ -14,6 +14,9 @@
 		It was on a Gravity Assist mission, passing right by Mars at only a distance of 250km and studying it from space, before using Mars' field of gravity to slingshot further into the Solar System.
 	<% } %>
 	</br>
+	<img src=<%=marsMissions.img; %>>
+	</br>
+
 	<a href="http://localhost:3000/index/">Return to Mission list</a>
 
 </body>
