--- a/mission_to_mars/views/show.ejs
+++ b/mission_to_mars/views/show.ejs
@@ -4,7 +4,11 @@
 	<title>Mission Page</title>
 </head>
 <body>
-	
+	<h1><%=missions.name; %></h1>
+
+	<p><%=missions.operator; %> launched <%=missions.name; %> on <%=missions.launchDate; %>. It was a <%=missions.missionType; %> mission.</p> 
+
+	<a href="/missions">Go back and choose another mission.</a>
 
 </body>
 </html>
